Update gradle usage